Frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
      tier: frontend
      track: stable
  replicas: 3
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
        track: stable
    spec:
      containers:
        - name: frontend
          image: httpd
          ports:
            - containerPort: 80
